--- a/dossiers.html
+++ b/dossiers.html
@@ -1,15 +1,7 @@
-
-
             <div class="row">
-
                 <div class="col-xs-12">
-
-                    <ul id="listeDossiers" class="list-group">
-
-                    </ul>
-
+                    <ul id="listeDossiers" class="list-group"></ul>
                 </div>
-
             </div>
 
             <script>
