--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="GAUDIN Jérémy">
         <link rel="icon" href="">
 
-        <title>Storage</title>
+        <title>Sticky</title>
 
         <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
