update des noms de fichiers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/storage.css">
+        <link rel="stylesheet" href="css/sticky.css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -62,7 +62,7 @@
         <script src="dist/jQuery/jQuery-2.1.4.min.js"></script>
         <script src="dist/jQuery/jQuery.mobile.custom.min.js"></script>
         <script src="dist/bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/storage.js"></script>
+        <script src="js/sticky.js"></script>
 
     </body>
 </html>
